update (19-Mar-2022 01:42 AM)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vectorspace.googlesignin" >
+
     <!-- Internet permission -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,9 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GoogleSignIn" >
-        <activity
-            android:name=".SecondActivity"
-            android:exported="false" />
+
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true" >
@@ -23,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Second Activity -->
+        <activity android:name=".SecondActivity"></activity>
     </application>
 
 </manifest>
